--- a/src/pages/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginForm/LoginForm.module.scss
@@ -56,6 +56,15 @@
             }
         }
     }
+
+    &__redirect {
+        display: flex;
+        gap: 10px;
+    }
+
+    &__link {
+        color: #12c287;
+    }
 }
 
 .errorMessage {
