--- a/src/pages/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginForm/LoginForm.module.scss
@@ -1,6 +1,16 @@
+.login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(50%);
+}
+
 .form {
     width: 380px;
     display: flex;
+    margin: 0 auto;
+    // transform: translateY(10%);
     flex-direction: column;
 
     &__input {
@@ -65,6 +75,11 @@
     &__link {
         color: #12c287;
     }
+}
+
+.title {
+    margin-top: 100px;
+    text-align: center;
 }
 
 .errorMessage {
